--- a/greenery/models/staging/staging_greenery/src_greenery.yml
+++ b/greenery/models/staging/staging_greenery/src_greenery.yml
@@ -6,11 +6,22 @@ sources:
     schema: public # this is the schema our raw data lives in
     database: dbt # this is the name of our database
 
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+
+    freshness:
+      warn_after: {count: 24, period: hour}
+      error_after: {count: 48, period: hour}
+
     tables:
       - name: addresses 
       - name: events 
+        loaded_at_field: created_at
       - name: order_items 
-      - name: orders 
+      - name: orders
+        loaded_at_field: created_at 
       - name: products 
       - name: promos 
       - name: users 
